Actualizar imagen de fondo y ajustar márgenes de la tabla del certificado

--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -7,7 +7,7 @@
 <body style="font-family: Arial, sans-serif; margin: 0; padding: 0;">
     
     <!-- Container principal -->
-    <table width="100%" cellpadding="0" cellspacing="0" style="background: transparent;">
+    <table width="100%" cellpadding="0" cellspacing="0" style="background: transparent;margin-top: 50px;margin-right: 50px;">
         <tr>
             <td style="padding: 0;">
                 
@@ -47,13 +47,14 @@
                             <div style="font-size: 18px; font-weight: bold; color: #603904; margin-bottom: 5px;">Número de certificado:</div>
                             <div style="font-size: 18px; font-weight: bold; color: #603904; margin-bottom: 20px;">[NUMERO_CERTIFICADO]</div>
                             
-                            <div style="font-size: 12px; color: #333; margin-bottom: 3px;">Fecha de aprobación: [FECHA_APROBACION]<br>Fecha de vencimiento: [FECHA_VENCIMIENTO]</div>
-                          
+                            <div style="font-size: 12px; color: #333; margin-bottom: 3px;">Fecha de aprobación: [FECHA_APROBACION]</div>
+                            <div style="font-size: 12px; color: #333; margin-bottom: 20px;">Fecha de vencimiento: [FECHA_VENCIMIENTO]</div>
                             
                             <div style="font-size: 12px; color: #333; margin-bottom: 15px; line-height: 1.4;">[ALCANCE_CERTIFICADO]</div>
                             
                             <div style="font-size: 12px; font-weight: bold; color: #333; margin-bottom: 5px;">Características de la instalación:</div>
-                            <div style="font-size: 12px; color: #333; margin-bottom: 2px;">Capacidad de almacenamiento: [CAPACIDAD_ALMACENAMIENTO] galones Número de tanques: [NUMERO_TANQUES]<br></div>        
+                            <div style="font-size: 12px; color: #333; margin-bottom: 2px;">Capacidad de almacenamiento: [CAPACIDAD_ALMACENAMIENTO] galones</div>
+                            <div style="font-size: 12px; color: #333; margin-bottom: 2px;">Número de tanques: [NUMERO_TANQUES]</div>
                         </td>
                     </tr>
                 </table>
@@ -62,20 +63,7 @@
                 <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 0px;">
                     <tr>
                         <td style="text-align: center;">
-                            <div style="font-size: 11px; color: #9d7120; line-height: 1;">[REQUISITOS_CERTIFICADO]</div>
-                        </td>
-                    </tr>
-                </table>
-
-                <!-- FILA 2 - Una columna centrada -->
-                <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 0px;">
-                    <tr>
-                        <td style="text-align: center;">
-                            <div><img src="images/firma.png" alt=""></div>
-                        </td>
-                        <td style="text-align: center;">
-                            <div style="font-size: 14px; color: #000000; line-height: 1;">JULIAN OSPINA<br>
-                                Gerente General</div>
+                            <div style="font-size: 11px; color: #9d7120; line-height: 1.4;">[REQUISITOS_CERTIFICADO]</div>
                         </td>
                     </tr>
                 </table>
