Actualizar plantilla del certificado

--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -7,7 +7,7 @@
 <body style="font-family: Arial, sans-serif; margin: 0; padding: 0;">
     
     <!-- Container principal -->
-    <table width="100%" cellpadding="0" cellspacing="0" style="background: transparent;margin-top: 50px;margin-right: 50px;">
+    <table width="100%" cellpadding="0" cellspacing="0" style="background: transparent;padding-top: 50px;padding-right: 50px;">
         <tr>
             <td style="padding: 0;">
                 
@@ -69,11 +69,11 @@
                 </table>
                 
                 <!-- FILA 3 - Una columna centrada -->
-                <table width="100%" cellpadding="0" cellspacing="0">
+                <table width="100%" cellpadding="0" cellspacing="0" style="padding-top: 100px;">
                     <tr>
                         <td style="text-align: center;">
-                            <div style="font-size: 10px; color: #9d7120; margin-bottom: 5px;">Este certificado es propiedad de ANTCORE y debe ser devuelto cuando sea solicitado por ANETCORE</div>
-                            <div style="font-size: 10px; color: #9d7120;">Carrera 11a N. 94-46, Bogotá  Página web: <a href="https://anetcore.com/"> www.anetcore.com </a> comercial@anetcore.com</div>
+                            <div style="font-size: 9px; color: #9d7120; margin-bottom: 5px;">Este certificado es propiedad de ANTCORE y debe ser devuelto cuando sea solicitado por ANETCORE<br>
+                            Carrera 11a N. 94-46, Bogotá  Página web: <a href="https://anetcore.com/"> www.anetcore.com </a> comercial@anetcore.com</div>
                         </td>
                     </tr>
                 </table>
