--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -72,7 +72,7 @@
                 <table width="100%" cellpadding="0" cellspacing="0" style="padding-top: 100px;">
                     <tr>
                         <td style="text-align: center;">
-                            <div style="font-size: 9px; color: #9d7120; margin-bottom: 5px;">Este certificado es propiedad de ANTCORE y debe ser devuelto cuando sea solicitado por ANETCORE<br>
+                            <div style="font-size: 9px; color: #9d7120; margin-bottom: 5px;"><br><br><br>Este certificado es propiedad de ANTCORE y debe ser devuelto cuando sea solicitado por ANETCORE<br>
                             Carrera 11a N. 94-46, Bogotá  Página web: <a href="https://anetcore.com/"> www.anetcore.com </a> comercial@anetcore.com</div>
                         </td>
                     </tr>
