--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -34,7 +34,7 @@
                     <tr>
                         <!-- Columna izquierda -->
                         <td width="50%" style="vertical-align: top; padding-right: 20px;">
-                            <div style="font-size: 16px; font-weight: bold; color: #603904; margin-bottom: 10px; line-height: 1.3;">[NOMBRE_INSTALACION]</div>
+                            <div style="font-size: 16px; font-weight: bold; color: #603904; margin-bottom: 10px; line-height: 1.3;"><br>[NOMBRE_INSTALACION]</div>
                             <div style="font-size: 12px; color: #333; margin-bottom: 20px;">[DIRECCION_INSTALACION]</div>
                             
                             <div style="font-size: 12px; font-weight: bold; color: #603904; margin-bottom: 5px;">RAZÓN SOCIAL:</div>
@@ -44,17 +44,15 @@
                         
                         <!-- Columna derecha -->
                         <td width="50%" style="vertical-align: top; padding-left: 20px;">
-                            <div style="font-size: 18px; font-weight: bold; color: #603904; margin-bottom: 5px;">Número de certificado:</div>
+                            <div style="font-size: 18px; font-weight: bold; color: #603904; margin-bottom: 5px;"><br>Número de certificado:</div>
                             <div style="font-size: 18px; font-weight: bold; color: #603904; margin-bottom: 20px;">[NUMERO_CERTIFICADO]</div>
                             
-                            <div style="font-size: 12px; color: #333; margin-bottom: 3px;">Fecha de aprobación: [FECHA_APROBACION]</div>
-                            <div style="font-size: 12px; color: #333; margin-bottom: 20px;">Fecha de vencimiento: [FECHA_VENCIMIENTO]</div>
+                            <div style="font-size: 12px; color: #333; margin-bottom: 3px;">Fecha de aprobación: [FECHA_APROBACION]<br>Fecha de vencimiento: [FECHA_VENCIMIENTO]</div>
                             
-                            <div style="font-size: 12px; color: #333; margin-bottom: 15px; line-height: 1.4;">[ALCANCE_CERTIFICADO]</div>
+                            <div style="font-size: 12px; color: #333; margin-bottom: 15px; line-height: 1;">[ALCANCE_CERTIFICADO]</div>
                             
                             <div style="font-size: 12px; font-weight: bold; color: #333; margin-bottom: 5px;">Características de la instalación:</div>
-                            <div style="font-size: 12px; color: #333; margin-bottom: 2px;">Capacidad de almacenamiento: [CAPACIDAD_ALMACENAMIENTO] galones</div>
-                            <div style="font-size: 12px; color: #333; margin-bottom: 2px;">Número de tanques: [NUMERO_TANQUES]</div>
+                            <div style="font-size: 12px; color: #333; margin-bottom: 2px;">Capacidad de almacenamiento: [CAPACIDAD_ALMACENAMIENTO] galones<br>Número de tanques: [NUMERO_TANQUES]</div>
                         </td>
                     </tr>
                 </table>
@@ -72,7 +70,7 @@
                 <table width="100%" cellpadding="0" cellspacing="0" style="padding-top: 100px;">
                     <tr>
                         <td style="text-align: center;">
-                            <div style="font-size: 9px; color: #9d7120; margin-bottom: 5px;"><br><br><br>Este certificado es propiedad de ANTCORE y debe ser devuelto cuando sea solicitado por ANETCORE<br>
+                            <div style="font-size: 9px; color: #9d7120; margin-bottom: 5px;"><br><br><br><br>Este certificado es propiedad de ANTCORE y debe ser devuelto cuando sea solicitado por ANETCORE<br>
                             Carrera 11a N. 94-46, Bogotá  Página web: <a href="https://anetcore.com/"> www.anetcore.com </a> comercial@anetcore.com</div>
                         </td>
                     </tr>
