Actualizar plantilla certificado HTML y usar <br> en lugar de \n para saltos de línea

--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -46,8 +46,7 @@
                             <div style="font-size: 18px; font-weight: bold; color: #603904; margin-bottom: 5px;"><br>Número de certificado:</div>
                             <div style="font-size: 18px; font-weight: bold; color: #603904; margin-bottom: 20px;">[NUMERO_CERTIFICADO]</div>
                             
-                            <div style="font-size: 12px; color: #333; margin-bottom: 3px;">Fecha de aprobación: [FECHA_APROBACION]<br>Fecha de vencimiento: [FECHA_VENCIMIENTO]</div>
-                            <div style="font-size: 12px; color: #333; margin-bottom: 3px;">Fecha de modificación: N/A</div>
+                            <div style="font-size: 12px; color: #333; margin-bottom: 3px;">Fecha de aprobación: [FECHA_APROBACION]<br>Fecha de modificación: N/A<br>Fecha de vencimiento: [FECHA_VENCIMIENTO]</div>
                             <div style="font-size: 12px; color: #333; margin-bottom: 15px; line-height: 1;">[ALCANCE_CERTIFICADO]</div>
                             
                             <div style="font-size: 12px; font-weight: bold; color: #333; margin-bottom: 5px;">Características de la instalación:</div>
