Cambiar color #9d7120 por #603904 en plantilla certificado y agregar nueva imagen

--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -59,7 +59,7 @@
                 <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 0px;">
                     <tr>
                         <td style="text-align: center;">
-                            <div style="font-size: 11px; color: #9d7120; line-height: 1.4;"><br>[REQUISITOS_CERTIFICADO]</div>
+                            <div style="font-size: 11px; color: #603904; line-height: 1.4;"><br>[REQUISITOS_CERTIFICADO]</div>
                         </td>
                     </tr>
                 </table>
@@ -68,7 +68,7 @@
                 <table width="100%" cellpadding="0" cellspacing="0" style="padding-top: 100px;">
                     <tr>
                         <td style="text-align: center;">
-                            <div style="font-size: 9px; color: #9d7120; margin-bottom: 5px;"><br><br><br><br><br>Este certificado es propiedad de ANTCORE y debe ser devuelto cuando sea solicitado por ANETCORE<br>
+                            <div style="font-size: 9px; color: #603904; margin-bottom: 5px;"><br><br>Este certificado es propiedad de ANTCORE y debe ser devuelto cuando sea solicitado por ANETCORE<br>
                             Carrera 11a N. 94-46, Bogotá  Página web: <a href="https://anetcore.com/"> www.anetcore.com </a> comercial@anetcore.com</div>
                         </td>
                     </tr>
