Integración de fuentes DIN Pro: conversión automática y aplicación en plantilla PDF

--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Certificado de Conformidad GLP</title>
 </head>
-<body style="font-family: Arial, sans-serif; margin: 0; padding: 0;">
+<body style="font-family: 'dinpro', Arial, sans-serif; margin: 0; padding: 0;">
     
     <!-- Container principal -->
     <table width="100%" cellpadding="0" cellspacing="0" style="background: transparent;padding-top: 50px;padding-right: 50px;">
@@ -21,7 +21,7 @@
                         
                         <!-- Columna derecha - Título principal -->
                         <td width="70%" style="vertical-align: top; text-align: right;">
-                            <div style="font-size: 14px; font-weight: bold; color: #603904; text-align: right;">
+                            <div style="font-size: 14px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; text-align: right;">
                                 <br><br>
                             </div>
                         </td>
@@ -33,24 +33,24 @@
                     <tr>
                         <!-- Columna izquierda -->
                         <td width="50%" style="vertical-align: top; padding-right: 20px;">
-                            <div style="font-size: 16px; font-weight: bold; color: #603904; margin-bottom: 10px; line-height: 1.3;"><br>[NOMBRE_INSTALACION]</div>
-                            <div style="font-size: 12px; color: #333; margin-bottom: 20px;">[DIRECCION_INSTALACION]</div>
+                            <div style="font-size: 16px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 10px; line-height: 1.3;"><br>[NOMBRE_INSTALACION]</div>
+                            <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 20px;">[DIRECCION_INSTALACION]</div>
                             
-                            <div style="font-size: 12px; font-weight: bold; color: #603904; margin-bottom: 5px;">RAZÓN SOCIAL:</div>
-                            <div style="font-size: 14px; font-weight: bold; color: #603904; margin-bottom: 5px;">[RAZON_SOCIAL]</div>
-                            <div style="font-size: 16px; font-weight: bold; color: #603904;">NIT [NIT]</div>
+                            <div style="font-size: 12px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;">RAZÓN SOCIAL:</div>
+                            <div style="font-size: 14px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;">[RAZON_SOCIAL]</div>
+                            <div style="font-size: 16px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904;">NIT [NIT]</div>
                         </td>
                         
                         <!-- Columna derecha -->
                         <td width="50%" style="vertical-align: top; padding-left: 20px;">
-                            <div style="font-size: 18px; font-weight: bold; color: #603904; margin-bottom: 5px;"><br>Número de certificado:</div>
-                            <div style="font-size: 18px; font-weight: bold; color: #603904; margin-bottom: 20px;">[NUMERO_CERTIFICADO]</div>
+                            <div style="font-size: 18px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;"><br>Número de certificado:</div>
+                            <div style="font-size: 18px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 20px;">[NUMERO_CERTIFICADO]</div>
                             
-                            <div style="font-size: 12px; color: #333; margin-bottom: 3px;">Fecha de aprobación: [FECHA_APROBACION]<br>Fecha de modificación: N/A<br>Fecha de vencimiento: [FECHA_VENCIMIENTO]</div>
-                            <div style="font-size: 12px; color: #333; margin-bottom: 15px; line-height: 1;">[ALCANCE_CERTIFICADO]</div>
+                            <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 3px;">Fecha de aprobación: [FECHA_APROBACION]<br>Fecha de modificación: N/A<br>Fecha de vencimiento: [FECHA_VENCIMIENTO]</div>
+                            <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 15px; line-height: 1;">[ALCANCE_CERTIFICADO]</div>
                             
-                            <div style="font-size: 12px; font-weight: bold; color: #333; margin-bottom: 5px;">Características de la instalación:</div>
-                            <div style="font-size: 12px; color: #333; margin-bottom: 2px;">Capacidad de almacenamiento: [CAPACIDAD_ALMACENAMIENTO] galones<br>Número de tanques: [NUMERO_TANQUES]</div>
+                            <div style="font-size: 12px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #333; margin-bottom: 5px;">Características de la instalación:</div>
+                            <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 2px;">Capacidad de almacenamiento: [CAPACIDAD_ALMACENAMIENTO] galones<br>Número de tanques: [NUMERO_TANQUES]</div>
                         </td>
                     </tr>
                 </table>
@@ -59,7 +59,7 @@
                 <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 0px;">
                     <tr>
                         <td style="text-align: center;">
-                            <div style="font-size: 11px; color: #603904; line-height: 1.4;"><br>[REQUISITOS_CERTIFICADO]</div>
+                            <div style="font-size: 11px; font-family: 'dinpro', Arial, sans-serif; color: #603904; line-height: 1.4;"><br>[REQUISITOS_CERTIFICADO]</div>
                         </td>
                     </tr>
                 </table>
@@ -68,7 +68,7 @@
                 <table width="100%" cellpadding="0" cellspacing="0" style="padding-top: 100px;">
                     <tr>
                         <td style="text-align: center;">
-                            <div style="font-size: 9px; color: #603904; margin-bottom: 5px;"><br><br>Este certificado es propiedad de ANTCORE y debe ser devuelto cuando sea solicitado por ANETCORE<br>
+                            <div style="font-size: 9px; font-family: 'dinpro', Arial, sans-serif; color: #603904; margin-bottom: 5px;"><br><br>Este certificado es propiedad de ANTCORE y debe ser devuelto cuando sea solicitado por ANETCORE<br>
                             Carrera 11a N. 94-46, Bogotá  Página web: <a href="https://anetcore.com/"> www.anetcore.com </a> comercial@anetcore.com</div>
                         </td>
                     </tr>
