--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -33,18 +33,18 @@
                     <tr>
                         <!-- Columna izquierda -->
                         <td width="50%" style="vertical-align: top; padding-right: 20px;">
-                            <div style="font-size: 25px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 10px; line-height: 1.3;transform:uppercase;"><br>[NOMBRE_INSTALACION]</div>
+                            <div style="font-size: 25px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 10px; line-height: 1.3;transform:uppercase;">[NOMBRE_INSTALACION]</div>
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 20px;">[DIRECCION_INSTALACION]</div>
                             
-                            <div style="font-size: 12px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;">RAZÓN SOCIAL:</div>
-                            <div style="font-size: 14px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;">[RAZON_SOCIAL]</div>
-                            <div style="font-size: 16px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904;">NIT [NIT]</div>
+                            <div style="font-size: 16px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;">RAZÓN SOCIAL:</div>
+                            <div style="font-size: 19px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;">[RAZON_SOCIAL]</div>
+                            <div style="font-size: 19px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904;">NIT [NIT]</div>
                         </td>
                         
                         <!-- Columna derecha -->
                         <td width="50%" style="vertical-align: top; padding-left: 20px;">
-                            <div style="font-size: 18px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;"><br>Número de certificado:</div>
-                            <div style="font-size: 18px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 20px;">[NUMERO_CERTIFICADO]</div>
+                            <div style="font-size: 19px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;"><br>Número de certificado:</div>
+                            <div style="font-size: 19px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 20px;">[NUMERO_CERTIFICADO]</div>
                             
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 3px;">Fecha de aprobación: [FECHA_APROBACION]<br>Fecha de modificación: N/A<br>Fecha de vencimiento: [FECHA_VENCIMIENTO]</div>
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 15px; line-height: 1;">[ALCANCE_CERTIFICADO]</div>
@@ -59,7 +59,7 @@
                 <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 0px;">
                     <tr>
                         <td style="text-align: center;">
-                            <div style="font-size: 11px; font-family: 'dinpro', Arial, sans-serif; color: #603904; line-height: 1.4;"><br>[REQUISITOS_CERTIFICADO]</div>
+                            <div style="font-size: 11px; font-family: 'dinpro', Arial, sans-serif; color: #806000; line-height: 1.4;"><br>[REQUISITOS_CERTIFICADO]</div>
                         </td>
                     </tr>
                 </table>
