--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -59,13 +59,13 @@
                 <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 0px;">
                     <tr>
                         <td style="text-align: center;">
-                            <div style="font-size: 11px; font-family: 'dinpro', Arial, sans-serif; color: #806000; line-height: 1.4;"><br>[REQUISITOS_CERTIFICADO]</div>
+                            <div style="font-size: 11px; font-family: 'dinpro', Arial, sans-serif; color: #806000; line-height: 1.4;">[REQUISITOS_CERTIFICADO]</div>
                         </td>
                     </tr>
                 </table>
                 
                 <!-- FILA 3 - Una columna centrada -->
-                <table width="100%" cellpadding="0" cellspacing="0" style="padding-top: 100px;">
+                <table width="100%" cellpadding="0" cellspacing="0">
                     <tr>
                         <td style="text-align: center;">
                             <div style="font-size: 9px; font-family: 'dinpro', Arial, sans-serif; color: #603904; margin-bottom: 5px;"><br>Este certificado es propiedad de ANTCORE y debe ser devuelto cuando sea solicitado por ANETCORE<br>
