--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -7,7 +7,7 @@
 <body style="font-family: 'dinpro', Arial, sans-serif; margin: 0; padding: 0;">
     
     <!-- Container principal -->
-    <table width="100%" cellpadding="0" cellspacing="0" style="background: transparent;padding-top: 50px;padding-right: 50px;">
+    <table width="100%" cellpadding="0" cellspacing="0" style="background: transparent; padding-top: 50px; padding-right: 50px;">
         <tr>
             <td style="padding: 0;">
                 
@@ -33,7 +33,7 @@
                     <tr>
                         <!-- Columna izquierda -->
                         <td width="50%" style="vertical-align: top; padding-right: 20px;">
-                            <div style="font-size: 25px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 10px; line-height: 1.3;transform:uppercase;">[NOMBRE_INSTALACION]</div>
+                            <div style="font-size: 25px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 10px; line-height: 1.3; text-transform: uppercase;">[NOMBRE_INSTALACION]</div>
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 20px;">[DIRECCION_INSTALACION]</div>
                             
                             <div style="font-size: 16px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;">RAZÓN SOCIAL:</div>
@@ -54,11 +54,16 @@
                         </td>
                     </tr>
                 </table>
+
+                
                 
                 <!-- FILA 2 - Una columna centrada -->
                 <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 0px;">
                     <tr>
-                        <td style="text-align: center;">
+                        <td width="40%" style="vertical-align: top; padding-right: 20px;">
+                            <div style="font-size: 11px; font-family: 'dinpro', Arial, sans-serif; color: #806000; line-height: 1.4;"></div>
+                        </td>
+                        <td width="60%" style="vertical-align: top; padding-left: 20px;">
                             <div style="font-size: 11px; font-family: 'dinpro', Arial, sans-serif; color: #806000; line-height: 1.4;">[REQUISITOS_CERTIFICADO]</div>
                         </td>
                     </tr>
