--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -43,7 +43,7 @@
                         
                         <!-- Columna derecha -->
                         <td width="50%" style="vertical-align: top; padding-left: 20px;">
-                            <div style="font-size: 19px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;"><br>Número de certificado:</div>
+                            <div style="font-size: 19px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;">Número de certificado:</div>
                             <div style="font-size: 19px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 20px;">[NUMERO_CERTIFICADO]</div>
                             
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 3px;">Fecha de aprobación: [FECHA_APROBACION]<br>Fecha de modificación: N/A<br>Fecha de vencimiento: [FECHA_VENCIMIENTO]</div>
@@ -64,7 +64,7 @@
                             <div style="font-size: 11px; font-family: 'dinpro', Arial, sans-serif; color: #806000; line-height: 1.4;"></div>
                         </td>
                         <td width="60%" style="vertical-align: top; padding-left: 20px;">
-                            <div style="font-size: 11px; font-family: 'dinpro', Arial, sans-serif; color: #806000; line-height: 1.4;">[REQUISITOS_CERTIFICADO]</div>
+                            <div style="font-size: 11px; font-family: 'dinpro', Arial, sans-serif; color: #806000; line-height: 1.4;text-align: center;">[REQUISITOS_CERTIFICADO]</div>
                         </td>
                     </tr>
                 </table>
