--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -32,12 +32,11 @@
                 <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 0px;">
                     <tr>
                         <!-- Columna izquierda -->
-                        <td width="50%" style="vertical-align: top; padding-right: 20px;">
+                        <td width="45%" style="vertical-align: top; padding-right: 20px;">
                             <div style="font-size: 25px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 10px; line-height: 1.3; text-transform: uppercase;">[NOMBRE_INSTALACION]</div>
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 20px;">[DIRECCION_INSTALACION]</div>
                             
-                            <div style="font-size: 16px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904;">RAZÓN SOCIAL:</div>
-                            <div style="font-size: 19px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;text-transform: uppercase;">[RAZON_SOCIAL]</div>
+                            <div style="font-size: 16px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904;text-transform: uppercase !important;">RAZÓN SOCIAL:<br><span style="font-size: 19px !important;">[RAZON_SOCIAL]</span></div>
                             <div style="font-size: 19px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904;text-transform: uppercase;">NIT [NIT]</div>
                         </td>
                         
