Aplicar mayúsculas a razón social y ajustar plantilla certificado

--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -36,14 +36,13 @@
                             <div style="font-size: 25px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 10px; line-height: 1.3; text-transform: uppercase;">[NOMBRE_INSTALACION]</div>
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 20px;">[DIRECCION_INSTALACION]</div>
                             
-                            <div style="font-size: 16px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904;text-transform: uppercase !important;">RAZÓN SOCIAL:<br><span style="font-size: 19px !important;">[RAZON_SOCIAL]</span></div>
-                            <div style="font-size: 19px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904;text-transform: uppercase;">NIT [NIT]</div>
+                            <div style="font-size: 16px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; text-transform: uppercase;">RAZÓN SOCIAL:<br><span style="font-size: 19px !important; text-transform: uppercase;">[RAZON_SOCIAL]</span></div>
+                            <div style="font-size: 19px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; text-transform: uppercase;">NIT [NIT]</div>
                         </td>
                         
                         <!-- Columna derecha -->
-                        <td width="50%" style="vertical-align: top; padding-left: 20px;">
-                            <div style="font-size: 19px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;">Número de certificado:</div>
-                            <div style="font-size: 19px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 20px;">[NUMERO_CERTIFICADO]</div>
+                        <td width="45%" style="vertical-align: top; padding-left: 20px;">
+                            <div style="font-size: 19px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;">Número de certificado<br>[NUMERO_CERTIFICADO]</div>
                             
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 3px;">Fecha de aprobación: [FECHA_APROBACION]<br>Fecha de modificación: N/A<br>Fecha de vencimiento: [FECHA_VENCIMIENTO]</div>
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 15px; line-height: 1;">[ALCANCE_CERTIFICADO]</div>
