Agregar padding-top 100px al footer del certificado

--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -47,7 +47,7 @@
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 3px;">Fecha de aprobación: [FECHA_APROBACION]<br>Fecha de modificación: N/A<br>Fecha de vencimiento: [FECHA_VENCIMIENTO]</div>
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 15px; line-height: 1;">[ALCANCE_CERTIFICADO]</div>
                             
-                            <div style="font-size: 12px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #333; margin-bottom: 5px;">Características de la instalación:</div>
+                            <div style="font-size: 12px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 5px;">Características de la instalación:</div>
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 2px;">Capacidad de almacenamiento: [CAPACIDAD_ALMACENAMIENTO] galones<br>Número de tanques: [NUMERO_TANQUES]</div>
                         </td>
                     </tr>
@@ -70,8 +70,8 @@
                 <!-- FILA 3 - Una columna centrada -->
                 <table width="100%" cellpadding="0" cellspacing="0">
                     <tr>
-                        <td style="text-align: center;">
-                            <div style="font-size: 9px; font-family: 'dinpro', Arial, sans-serif; color: #603904; margin-bottom: 5px;"><br><br><br><br>Este certificado es propiedad de ANTCORE y debe ser devuelto cuando sea solicitado por ANETCORE<br>
+                        <td style="text-align: center; padding-top: 100px;">
+                            <div style="font-size: 9px; font-family: 'dinpro', Arial, sans-serif; color: #603904; margin-bottom: 5px;">Este certificado es propiedad de ANTCORE y debe ser devuelto cuando sea solicitado por ANETCORE<br>
                             Carrera 11a N. 94-46, Bogotá  Página web: <a href="https://anetcore.com/"> www.anetcore.com </a> comercial@anetcore.com</div>
                         </td>
                     </tr>
