--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -33,7 +33,7 @@
                     <tr>
                         <!-- Columna izquierda -->
                         <td width="40%" style="vertical-align: top; padding-right: 20px;">
-                            <div style="font-size: 25px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 10px; line-height: 1.3; text-transform: uppercase;">[NOMBRE_INSTALACION]</div>
+                            <div style="font-size: 25px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 10px; line-height: 1.3; text-transform: uppercase;"><strong>[NOMBRE_INSTALACION]</strong></div>
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 20px;">[DIRECCION_INSTALACION]</div>
                             
                             <div style="font-size: 16px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; text-transform: uppercase;">RAZÓN SOCIAL:<br><span style="font-size: 19px !important; text-transform: uppercase;">[RAZON_SOCIAL]</span></div>
