Actualizar plantilla-certificado.html

--- a/templates/plantilla-certificado.html
+++ b/templates/plantilla-certificado.html
@@ -32,8 +32,8 @@
                 <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 0px;">
                     <tr>
                         <!-- Columna izquierda -->
-                        <td width="45%" style="vertical-align: top; padding-right: 20px;">
-                            <div style="font-size: 25px; font-family: 'dinpro', Arial, sans-serif; color: #603904;font-weight: bold">[NOMBRE_INSTALACION]</div>
+                        <td width="40%" style="vertical-align: top; padding-right: 20px;">
+                            <div style="font-size: 25px; font-family: 'dinpro', Arial, sans-serif; color: #603904;font-weight: bold;line-height: 25px;">[NOMBRE_INSTALACION]</div>
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 20px;">[DIRECCION_INSTALACION]</div>
                             
                             <div style="font-size: 16px; font-weight: bold; color: #603904; text-transform: uppercase;">RAZÓN SOCIAL:<br><span style="font-size: 19px !important; text-transform: uppercase;">[RAZON_SOCIAL]</span></div>
@@ -41,7 +41,7 @@
                         </td>
                         
                         <!-- Columna derecha -->
-                        <td width="45%" style="vertical-align: top; padding-left: 20px;">
+                        <td width="50%" style="vertical-align: top; padding-left: 20px;">
                             <div style="font-size: 19px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; font-weight: bold; color: #603904; margin-bottom: 5px;">Número de certificado<br>[NUMERO_CERTIFICADO]</div>
                             
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 3px;">Fecha de aprobación: [FECHA_APROBACION]<br>Fecha de modificación: N/A<br>Fecha de vencimiento: [FECHA_VENCIMIENTO]</div>
@@ -49,13 +49,15 @@
                             
                             <div style="font-size: 12px; font-family: 'dinprobold', 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 5px;">Características de la instalación:</div>
                             <div style="font-size: 12px; font-family: 'dinpro', Arial, sans-serif; color: #333; margin-bottom: 2px;">Capacidad de almacenamiento: [CAPACIDAD_ALMACENAMIENTO] galones<br>Número de tanques: [NUMERO_TANQUES]</div>
+                            
+                            <div style="font-size: 11px; font-family: 'dinpro', Arial, sans-serif; color: #806000; line-height: 1.4;text-align: center;">[REQUISITOS_CERTIFICADO]</div>
                         </td>
                     </tr>
                 </table>
 
                 
                 
-                <!-- FILA 2 - Una columna centrada -->
+                <!-- FILA 2 - Una columna centrada 
                 <table width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 0px;">
                     <tr>
                         <td width="30%" style="vertical-align: top; padding-right: 20px;">
@@ -65,7 +67,7 @@
                             <div style="font-size: 11px; font-family: 'dinpro', Arial, sans-serif; color: #806000; line-height: 1.4;text-align: center;">[REQUISITOS_CERTIFICADO]</div>
                         </td>
                     </tr>
-                </table>
+                </table>-->
                 
             </td>
         </tr>
